# T3_M2

./: README.md
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/t3_pose_estimation/share/t3_pose_estimation/: package.bash  package.zsh
log/: latest_build
mock_server/: mock_server.py
ws_t3/install/: local_setup.sh  setup.bash  setup.sh
ws_t3/install/t3_interfaces/include/t3_interfaces/t3_interfaces/msg/: frame_info.h  frame_info.hpp  pose_estimate.h  pose_estimate.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ws_t3/install/t3_interfaces/share/ament_index/resource_index/package_run_dependencies/: t3_interfaces
ws_t3/install/t3_interfaces/share/ament_index/resource_index/parent_prefix_path/: t3_interfaces
ws_t3/install/t3_interfaces/share/ament_index/resource_index/rosidl_interfaces/: t3_interfaces
ws_t3/install/t3_interfaces/share/t3_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_t3/install/t3_interfaces/share/t3_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_t3_interfaces__rosidl_generator_cExport-noconfig.cmake  export_t3_interfaces__rosidl_generator_cppExport.cmake  export_t3_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_t3_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  t3_interfacesConfig-version.cmake  t3_interfacesConfig.cmake  t3_interfaces__rosidl_typesupport_cExport.cmake  t3_interfaces__rosidl_typesupport_cppExport.cmake  t3_interfaces__rosidl_typesupport_introspection_cExport.cmake  t3_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake
ws_t3/install/t3_interfaces/share/t3_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ws_t3/install/t3_interfaces/share/t3_interfaces/msg/: FrameInfo.idl  FrameInfo.msg  PoseEstimate.idl  PoseEstimate.msg
ws_t3/install/t3_interfaces/share/t3_interfaces/rust/: Cargo.toml  build.rs
ws_t3/install/t3_interfaces/share/t3_interfaces/rust/src/: lib.rs  msg.rs
ws_t3/install/t3_pose_estimation/lib/t3_pose_estimation/: frame_client_node  pose_estimator_node
ws_t3/install/t3_pose_estimation/share/t3_pose_estimation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_t3/install/t3_pose_estimation/share/t3_pose_estimation/cmake/: t3_pose_estimationConfig-version.cmake  t3_pose_estimationConfig.cmake
ws_t3/install/t3_pose_estimation/share/t3_pose_estimation/config/: camera_synthetic.yaml  params.yaml
ws_t3/install/t3_pose_estimation/share/t3_pose_estimation/environment/: ament_prefix_path.dsv  path.dsv
ws_t3/install/t3_pose_estimation/share/t3_pose_estimation/launch/: mission2.launch.py
ws_t3/install/t3_pose_estimation/share/t3_pose_estimation/rviz/: t3_mission2.rviz
ws_t3/log/: latest_build
ws_t3/src/t3_interfaces/: CMakeLists.txt  package.xml
ws_t3/src/t3_interfaces/msg/: FrameInfo.msg  PoseEstimate.msg
ws_t3/src/t3_pose_estimation/: CMakeLists.txt  package.xml
ws_t3/src/t3_pose_estimation/config/: camera_synthetic.yaml  params.yaml
ws_t3/src/t3_pose_estimation/launch/: mission2.launch.py
ws_t3/src/t3_pose_estimation/rviz/: t3_mission2.rviz
ws_t3/src/t3_pose_estimation/src/: frame_client_node.cpp  pose_estimator_node.cpp
(+39 files in other folders)
